completed calculator